# sh_supply_companies_stats_2022

./: config.yaml  main.py  pyproject.toml  query.py  readme.md
configuration/: config.py
model/: __init__.py  company.py
mongodb_scripts/: bad_company_aggr.py
outputs/: bad_companies.csv  lt_40_companies.csv  lt_50_companies.csv
services/: company_service.py  data_crawer.py  db.py  tianyancha_service.py
util/: logger.py
